# kita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kita_bootstrap.py
include/kita/: events.hpp  helpers.hpp  kita.hpp
src/: kita.cpp
